syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "FreezeBalanceContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

import "core/contract/common.proto";

message FreezeBalanceContract {
    bytes owner_address = 1;
    int64 frozen_balance = 2;
    int64 frozen_duration = 3;

    ResourceCode resource = 10;
    bytes receiver_address = 15;
}


message UnfreezeBalanceContract {
    bytes owner_address = 1;

    ResourceCode resource = 10;
    bytes receiver_address = 15;
}

message WithdrawBalanceContract {
    bytes owner_address = 1;
}

message TransferContract {
    bytes owner_address = 1;
    bytes to_address = 2;
    int64 amount = 3;
}
